fix icon alignment it in canvas-ui

--- a/canvas_modules/common-canvas/src/common-properties/components/title-editor/title-editor.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/title-editor/title-editor.scss
@@ -84,18 +84,9 @@
 	width: calc(100% - 2px); // subtract 2px for input active right border
 }
 
-.properties-title-editor-btn.help, .properties-title-editor-btn.edit {
-	fill: $icon-02;
-	// edit & help buttons size - 32x32
-	width: $spacing-07;
-	min-height: $spacing-07;
-	padding-left: $spacing-04;
-	padding-right: $spacing-04;
-	&:hover {
-		background-color: $ui-03;
-	}
-	&:active {
-		background-color: $ui-03;
+.properties-title-editor-btn.help {
+	&.help {
+		margin-left: $spacing-02; // spacing between heading label and help button
 	}
 }
 
